# lichtfeld-measurement-plugin

./: .gitignore  .lichtfeld-source.json  AGENTS.md  LICENSE  README.md  __init__.py  pyproject.toml
core/: __init__.py  measurement.py
operators/: __init__.py  gizmo_drag.py  measure_picker.py
panels/: __init__.py  measurement_panel.py
tools/: __init__.py
