# SPDX-FileCopyrightText: 2025 LichtFeld Studio Authors
# SPDX-License-Identifier: GPL-3.0-or-later

[project]
name = "measurement_tool"
version = "1.0.0"
description = "3D measurement tool for measuring distances between points on Gaussian Splats"
author = "Jacob van Beets"

dependencies = [
    "numpy",
]

[tool.lichtfeld]
auto_start = true
hot_reload = true
plugin_api = ">=1,<2"
lichtfeld_version = ">=0.4.2"
required_features = []
